--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
+    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
       <li class="nav-item">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -12,21 +12,18 @@
       <li class="nav-item">
         <a class="nav-link">Messages</a>
       </li>
-      <li class="nav-item" (click)="logout()">
-        <a class="nav-link">Logout</a>
-      </li>
     </ul>
 
-    <div class="dropdown" *ngIf="loggedIn">
-      <a class="dropdown-toggle text-light">Welcome User</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item">Edit Profile</a>
-        <a class="dropdown-item" (click)="logout()">Logout</a>
+    <div class="dropdown" *ngIf="accountService.currentUser$ | async" ngbDropdown>
+      <a class="dropdown-toggle text-light text-decoration-none" ngbDropdownToggle>Welcome User</a>
+      <div class="dropdown-menu" ngbDropdownMenu >
+        <a class="dropdown-item" ngbDropdownItem>Edit Profile</a>
+        <a class="dropdown-item" ngbDropdownItem (click)="logout()">Logout</a>
       </div>
     </div>
 
     <form
-      *ngIf="!loggedIn"
+      *ngIf="!(accountService.currentUser$ | async)"
       #loginForm="ngForm"
       class="d-flex"
       (ngSubmit)="login()"
