--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,22 +1,40 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-lg bg-primary navbar-dark" data-bs-theme="dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating App</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
+      >Dating App</a
+    >
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Messages</a>
-      </li>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/members" routerLinkActive="active"
+            >Matches</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+            >Lists</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+            >Messages</a
+          >
+        </li>
+      </ng-container>
     </ul>
 
-    <div class="dropdown" *ngIf="accountService.currentUser$ | async" ngbDropdown>
-      <a class="dropdown-toggle text-light text-decoration-none" ngbDropdownToggle>Welcome User</a>
-      <div class="dropdown-menu" ngbDropdownMenu >
+    <div
+      class="dropdown"
+      *ngIf="(accountService.currentUser$ | async) as user"
+      ngbDropdown
+    >
+      <a
+        class="dropdown-toggle text-light text-decoration-none"
+        ngbDropdownToggle
+        >Welcome {{user.username | titlecase}}</a
+      >
+      <div class="dropdown-menu" ngbDropdownMenu>
         <a class="dropdown-item" ngbDropdownItem>Edit Profile</a>
         <a class="dropdown-item" ngbDropdownItem (click)="logout()">Logout</a>
       </div>
@@ -32,7 +50,7 @@
       <input
         name="username"
         [(ngModel)]="model.username"
-        class="form-control me-2"
+        class="form-control me-2 text-black"
         type="text"
         placeholder="Username"
         aria-label="Search"
@@ -40,7 +58,7 @@
       <input
         name="password"
         [(ngModel)]="model.password"
-        class="form-control me-2"
+        class="form-control me-2 text-black"
         type="password"
         placeholder="Password"
         aria-label="Password"
