--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-primary navbar-dark" data-bs-theme="dark">
+<nav
+  class="navbar navbar-expand-lg bg-primary navbar-dark"
+  data-bs-theme="dark"
+>
   <div class="container">
     <a class="navbar-brand" routerLink="/" routerLinkActive="active"
       >Dating App</a
@@ -22,17 +25,22 @@
           >
         </li>
       </ng-container>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/errors" routerLinkActive="active"
+          >Errors</a
+        >
+      </li>
     </ul>
 
     <div
       class="dropdown"
-      *ngIf="(accountService.currentUser$ | async) as user"
+      *ngIf="accountService.currentUser$ | async as user"
       ngbDropdown
     >
       <a
         class="dropdown-toggle text-light text-decoration-none"
         ngbDropdownToggle
-        >Welcome {{user.username | titlecase}}</a
+        >Welcome {{ user.username | titlecase }}</a
       >
       <div class="dropdown-menu" ngbDropdownMenu>
         <a class="dropdown-item" ngbDropdownItem>Edit Profile</a>
