--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,28 +1,16 @@
-<nav
-  class="navbar navbar-expand-lg bg-primary navbar-dark"
-  data-bs-theme="dark"
->
+<nav class="navbar navbar-expand-mg bg-primary fixed-top navbar-dark">
   <div class="container">
-    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
-      >Dating App</a
-    >
-
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
+    <ul class="navbar-nav me-auto">
       <ng-container *ngIf="accountService.currentUser$ | async">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/members" routerLinkActive="active"
-            >Matches</a
-          >
+          <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
-            >Lists</a
-          >
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
-            >Messages</a
-          >
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
         </li>
       </ng-container>
       <li class="nav-item">
@@ -58,7 +46,7 @@
       <input
         name="username"
         [(ngModel)]="model.username"
-        class="form-control me-2 text-black"
+        class="form-control me-2"
         type="text"
         placeholder="Username"
         aria-label="Search"
@@ -66,12 +54,12 @@
       <input
         name="password"
         [(ngModel)]="model.password"
-        class="form-control me-2 text-black"
+        class="form-control me-2"
         type="password"
         placeholder="Password"
         aria-label="Password"
       />
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
   </div>
 </nav>
