adding photo backend

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -3,9 +3,10 @@
     <h1>your profile</h1>
   </div>
   <div class="col-8">
-    <div class="alert alert-info pb-0"  *ngIf="editForm?.dirty">
+    <div class="alert alert-info pb-0" *ngIf="editForm?.dirty">
       <p>
-        <strong>Information: </strong>You have made changes. Any unsaved changes will be lost
+        <strong>Information: </strong>You have made changes. Any unsaved changes
+        will be lost
       </p>
     </div>
   </div>
@@ -35,7 +36,14 @@
         </div>
       </div>
       <div class="card-footer">
-        <button type="submit" form="editForm" [disabled]="!editForm?.dirty" class="btn btn-success col-12">Save changes</button>
+        <button
+          type="submit"
+          form="editForm"
+          [disabled]="!editForm?.dirty"
+          class="btn btn-success col-12"
+        >
+          Save changes
+        </button>
       </div>
     </div>
   </div>
@@ -89,7 +97,7 @@
       <li ngbNavItem>
         <button ngbNavLink>Edit Photos</button>
         <ng-template ngbNavContent>
-          <p>Photo edit will go here</p>
+          <app-photo-edit [member]="member"></app-photo-edit>
         </ng-template>
       </li>
     </ul>
