--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -7,6 +7,9 @@
         class="card-img-top img-thumbnail"
       />
       <div class="card-body">
+        <div class="mb-2" *ngIf="(presenceService.onlineUsers$ | async)?.includes(member.userName)">
+          <i class="class fa fa-user cirile text-success"></i> Online now
+        </div>
         <div>
           <strong>Locations: </strong>
           <p>{{ member.city }}, {{ member.country }}</p>
@@ -17,7 +20,7 @@
         </div>
         <div>
           <strong>Last active: </strong>
-          <p>{{ member.lastActive + 'Z' | timeago}}</p>
+          <p>{{ member.lastActive| timeago}}</p>
         </div>
         <div>
           <strong>Member since: </strong>
@@ -59,7 +62,7 @@
       <li [ngbNavItem]="4">
         <button ngbNavLink (click)="loadMessages()">Messages</button>
         <ng-template ngbNavContent>
-          <app-member-messages [username]="member.userName" [messages]="messages"></app-member-messages>
+          <app-member-messages [username]="member.userName"></app-member-messages>
         </ng-template>
       </li>
     </ul>
