--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -8,6 +8,9 @@
       <button (click)="registerToggle()" class="btn btn-primary btn-lg me-2">Register</button>
       <button class="btn btn-primary btn-info btn-lg">Learn more</button>
     </div>
+    <h3>Test account: </h3>
+    <h3>username: admin</h3>
+    <h3>password: Pa$$w0rd</h3>
   </div>
 
   <div *ngIf="registerMode" class="container">
